// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ActionBar /> create basic Action Bar 1`] = `
<div
  className="fd-action-bar"
>
  <div
    className="fd-action-bar__header"
  >
    <h3
      className="fd-action-bar__title"
    >
      Page Title
    </h3>
    <div
      className="fd-action-bar__actions"
    >
      <button>
        Button
      </button>
    </div>
  </div>
  <p
    className="fd-action-bar__description"
  >
    Action Bar Description
  </p>
</div>
`;

exports[`<ActionBar /> create basic Action Bar 2`] = `
<div
  className="fd-action-bar"
>
  <div
    className="fd-action-bar__header"
  >
    <h3
      className="fd-action-bar__title"
    >
      Page Title
    </h3>
    <div
      className="fd-action-bar__actions"
    >
      <button
        className="fd-button"
        type="button"
      >
        Button
      </button>
      <button
        className="fd-button fd-button--emphasized"
        type="button"
      >
        Button
      </button>
    </div>
  </div>
  <p
    className="fd-action-bar__description"
  >
    Description
  </p>
</div>
`;

exports[`<ActionBar /> create basic Action Bar 3`] = `
<div
  className="fd-action-bar"
  onClick={[Function]}
>
  <div
    className="fd-action-bar__header"
    onClick={[Function]}
  >
    <h3
      className="fd-action-bar__title"
    >
      Page Title
    </h3>
    <div
      className="fd-action-bar__actions"
    >
      <button
        className="fd-button"
        type="button"
      >
        Button
      </button>
      <button
        className="fd-button fd-button--emphasized"
        type="button"
      >
        Button
      </button>
    </div>
  </div>
  <p
    className="fd-action-bar__description"
  >
    Description
  </p>
</div>
`;

exports[`<ActionBar /> create basic Action Bar 4`] = `
<div
  className="fd-action-bar"
>
  <div
    className="fd-action-bar__header"
  >
    <h3
      className="fd-action-bar__title"
    >
      Page Title
    </h3>
    <div
      className="fd-action-bar__actions"
    >
      <button
        className="fd-button"
        type="button"
      >
        Button
      </button>
      <button
        className="fd-button fd-button--emphasized"
        type="button"
      >
        Button
      </button>
    </div>
  </div>
</div>
`;

exports[`<ActionBar /> create basic Action Bar 5`] = `
<div
  className="fd-action-bar"
>
  <div
    className="fd-action-bar__header"
  >
    <h3
      className="fd-action-bar__title"
    >
      Page Title
    </h3>
  </div>
</div>
`;
